# Team-Maker

./: main.py  pyproject.toml  team_maker.py
app/: main.py  team_maker.py
app/templates/: index.html
templates/: index.html
