[tool.poetry]
name = "team-maker"
version = "0.1.0"
description = ""
authors = ["KimJongkwang <kjk6646@naver.com>"]
readme = "README.md"
packages = [{include = "team_maker"}]

[tool.poetry.dependencies]
python = "3.10.10"
uvicorn = "^0.28.0"
fastapi = "^0.110.0"
jinja2 = "^3.1.3"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
